@@ -1,5 +1,6 @@
 v3.0.10 - in progress
 	* Fixed xbee_frameWait()
+	* Fixed libxbee::Con::Tx() - now throws a libxbee::xbee_etx
 
 v3.0.9 - 29 Apr 2013
 	* Fixed high baudrate corruption issues
